syntax = "proto3";

option go_package = ".;sort_grpc";

package sort_grpc;


service SortService {
  rpc MergeSort (SortRequest) returns (SortResponse) {}
  rpc QuickSort (SortRequest) returns (SortResponse) {}
  rpc MergeSortAsync (SortRequest) returns (SortResponse) {}
  rpc QuickSortAsync (SortRequest) returns (SortResponse) {}
}

message SortRequest {
  repeated int64 array = 1;
}

message SortResponse {
  repeated int64 sortedArray = 1;
}
